# test_finance_task

./: .env.template  .gitignore  Dockerfile.local  README.md  docker-compose.yml  entrypoint.prod.sh  logs_formatters.py  pyproject.toml  start-local.sh
config/: settings.py  urls.py
tests/: conftest.py  test_transactions.py  test_users.py
tests/fixtures/: transaction.py  user.py
transactions/: models.py  serializers.py  urls.py  views.py
transactions/migrations/: 0001_initial.py
users/: managers.py  models.py  serializers.py  urls.py
users/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_managers_and_more.py
